<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dixitpatel.movieratingdemo.feature_movie_rating.presentation.ui.home.HomeFragment"
        android:label="HomeFragment" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.dixitpatel.movieratingdemo.feature_movie_rating.presentation.ui.search.SearchFragment"
        android:label="SearchFragment" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.dixitpatel.movieratingdemo.feature_movie_rating.presentation.ui.favorites.FavoritesFragment"
        android:label="FavoritesFragment" />
</navigation>