...
    <string name="item_count">" (%d)"</string>
    <string name="item_count_s">" (%s)"</string>
    <string name="title_see_all_search" formatted="false" >\"%s\" (%d)</string>

    <string name="search_query_hint">Search movie and TV show</string>

    <string name="double_press_exit">Press again to exit</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="gender_non_binary">Transgender</string>
    <string name="biography">Biography</string>
    <string name="gender">Gender</string>
    <string name="department">Department</string>
...
